--- a/gamePlayer/index.html
+++ b/gamePlayer/index.html
@@ -73,7 +73,7 @@
 						<div><input type="checkbox" /><span></span></div>
 					</template>
 					<div id="reportText">
-						<div><span class="setName"></span> reports:</div>
+						<div><span class="setName"></span> scores:</div>
 						<div id="linesPoint"></div>
 						<div>NotCC git-%VITE_VERSION%</div>
 					</div>
